# minisynth

./: BUILD.bazel  LICENSE  README.md  WORKSPACE.bazel  audio.h  audio_sdl.c  audio_sdl.h  functions.c  functions.h  oscillator.c  oscillator.h  rtmidi.cc  synth.c  synth.h
misc/: super_mario_bros.mid  super_mario_bros.mscz
